# moana-bufrtools

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  geteccodes.sh  prod.qc.mangopare_GTS.yml  pyproject.toml  setup.cfg  setup.py  tox.ini  travis.yml
.github/workflows/: unittests.yml
GTS_encode/: GTS_encode.py  GTS_encode_wrapper.py  __init__.py  test_GTS_encode.py  test_GTS_encode_wrapper.py  transfer.py  utils.py
GTS_encode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
GTS_encode/tests/: encoding_test.py
data/: MOANA_0058_434_230228081912_qc.nc
requirements/: default.txt  tests.txt
test/: 315003_MOANA_0058_434_230228081912_qc.csv  315007_MOANA_0058_434_230228081912_qc.csv  315012_MOANA_0058_434_230228081912_qc.csv  MOANA_0058_434_230228081912_qc.bufr
